luego de la interpolacion

--- a/WRFP/templates/base.html
+++ b/WRFP/templates/base.html
@@ -90,7 +90,7 @@
                   </div>
                   <!-- <canvas id="myChart" width="400" height="400">                    
                   </canvas> -->
-                  <!-- Panel de los 4 pronsticos diarios -->
+                  <!-- Panel de los 4 pronosticos diarios -->
                   <section class="panel panel-default">
                     <div class="row m-l-none m-r-none bg-light lter">                    
                       <div class="col-sm-6 col-md-3 padder-v b-r b-light">
@@ -167,12 +167,12 @@
                       </div>
                     </div>
                   </section>
-                  <!-- Fin del Panel de los 4 pronsticos diarios -->
+                  <!-- Fin del Panel de los 4 pronosticos diarios -->
                   <!-- Panel  -->
                   <div style="width:90%; margin-bottom: 100px;">
                     <canvas id="canvas"></canvas>
                   </div>
-                  <!-- Fin del Panel historico de pronstico -->
+                  <!-- Fin del Panel historico de pronostico -->
                             
                 </section>                    
                 <footer class="footer bg-white b-t b-light">
